# coreutils

./: Cargo.toml
cp/: Cargo.toml  build.rs
cp/src/: cp.yml  main.rs
