[workspace]
members = [
    "clear",
    "coreutils_core",
    "basename",
    "cp",
    "dirname",
    "date",
    "echo",
    "env",
    "false",
    "groups",
    "id",
    "link",
    "logname",
    "nice",
    "pwd",
    "rm",
    "rmdir",
    "sleep",
    "true",
    "unlink",
    "whoami",
    "uname",
    "users",
    "tty",
    "wc",
    "yes",
]
