[package]
name = "cp"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
build = "build.rs"
edition = "2018"

[dependencies]
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
symlink = "~0.1.0"
filetime = "0.2"

[build-dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
symlink = "~0.1.0"
filetime = "~0.2"
